src/objects/Menu__c.object
<CustomObject>
    <description>Represents menu options than can be related to other menu options.</description>
    <fields>
        <fullName>Audience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audience</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Audience__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>AudienceGroup</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Audience__c</referenceTo>
        <relationshipLabel>Menus</relationshipLabel>
        <relationshipName>Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Behaviour__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Tab</fullName>
                </value>
                <value>
                    <fullName>Same Tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClusterRootExternalId__c</fullName>
        <formula>if(Cluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ExternalId__c, &apos;&apos;)
+
if(Cluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;)
+
if(Cluster__r.ParentCluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ParentCluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;)
+
if(Cluster__r.ParentCluster__r.ParentCluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ParentCluster__r.ParentCluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Root External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Menus</relationshipLabel>
        <relationshipName>Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ComponentName__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MenuIcon__c</fullName>
        <label>Menu Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MenuLabel__c</fullName>
        <label>Menu Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Menus</relationshipLabel>
        <relationshipName>Navigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Menu</label>
        <referenceTo>Menu__c</referenceTo>
        <relationshipLabel>ParentMenus</relationshipLabel>
        <relationshipName>SubMenus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Manage the status of the record.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLParameters__c</fullName>
        <label>URL Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Menu</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Menu</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Menu__c.Menu</value>
        </filters>
        <label>Menu</label>
    </listViews>
    <listViews>
        <fullName>Submenu</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Menu__c.SubMenu</value>
        </filters>
        <label>Submenu</label>
    </listViews>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menus</pluralLabel>
    <recordTypes>
        <fullName>Menu</fullName>
        <active>true</active>
        <description>Represents the highest level of a Menu tree. It can be asociated to a component. (Ex. File)</description>
        <label>Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>SubMenu</fullName>
        <active>true</active>
        <description>Represents a grouping menu of other grouping menus or menu leafs. (Ex. New, Open, Save)</description>
        <label>SubMenu</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
    <validationRules>
        <fullName>LevelValidation</fullName>
        <active>true</active>
        <description>Gets an error if you add more than three related submenus</description>
        <errorConditionFormula>NOT(
OR(
ISBLANK(ParentMenu__c),
ISBLANK(ParentMenu__r.ParentMenu__c),
ISBLANK(ParentMenu__r.ParentMenu__r.ParentMenu__c),
ISBLANK(ParentMenu__r.ParentMenu__r.ParentMenu__r.ParentMenu__c)
)
)</errorConditionFormula>
        <errorMessage>Sorry, this menu already has the max of submenu levels, you can&apos;t add more.</errorMessage>
    </validationRules>
</CustomObject>